<resources>
    <string name="app_name">Sandbox</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="create_repo">Create repo</string>
    <string name="repo_saved">Repo saved successfully</string>
    <string name="network_error">Network error, \nplease try again later</string>
    <string name="retry">Retry</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <string name="repo_button_like">like</string>
    <string name="repo_button_unlike">unlike</string>

    <string name="repo_like_count">like count: %s</string>

    <string name="menu_repos">Repos</string>
    <string name="menu_users">Users</string>
    <string name="menu_time">Time</string>
    <string name="current_time">Current time: %s</string>
    <string name="go_to_app">Go to the app</string>
    <string name="show_time">Show</string>
    <string name="hide_time">Hide</string>

</resources>
